force-app/main/default/objects/Queue_Group_Link__mdt/Queue_Group_Link__mdt.object-meta.xml
<CustomObject>
    <description>Source of truth for which Public Group should be a member of which Queue. QueueGroupLinkReconciler reads this to create any missing GroupMember records, so it self-heals if a Copado deployment brings the Queue and Group in without re-establishing the membership.</description>
    <label>Queue Group Link</label>
    <pluralLabel>Queue Group Links</pluralLabel>
</CustomObject>