force-app/main/default/objects/Queue_Group_Link__mdt/fields/Group_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_API_Name__c</fullName>
    <description>DeveloperName of the Public Group (the Group record where Type = &apos;Regular&apos;). Used by QueueGroupLinkReconciler to look up the Group&apos;s Id.</description>
    <label>Group API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>