force-app/main/default/objects/Queue_Group_Link__mdt/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <description>Display label of the Public Group, for readability only. Group_API_Name__c is what the reconciler actually queries by.</description>
    <label>Group Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>