force-app/main/default/objects/Queue_Group_Link__mdt/fields/Queue_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_API_Name__c</fullName>
    <description>DeveloperName of the Queue (the Group record where Type = &apos;Queue&apos;). Used by QueueGroupLinkReconciler to look up the Queue&apos;s Id.</description>
    <label>Queue API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>