force-app/main/default/objects/Queue_Group_Link__mdt/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <description>Display label of the Queue, for readability only. Queue_API_Name__c is what the reconciler actually queries by.</description>
    <label>Queue Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>