force-app/main/default/objects/Queue_Group_Link__mdt/listViews/Queue_Group_Link_View.listView-meta.xml
<ListView>
    <fullName>Queue_Group_Link_View</fullName>
    <columns>MasterLabel</columns>
    <columns>Queue_Name__c</columns>
    <columns>Queue_API_Name__c</columns>
    <columns>Group_Name__c</columns>
    <columns>Group_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Queue Group Link View</label>
</ListView>